# ragpy

./: Makefile  pyproject.toml
app/api/v1/: chat.py
app/config/: settings.py
app/llm/: factory.py  prompts.py
app/pipeline/ingest/: metadata_enricher.py  parser.py  pipeline.py
app/pipeline/query/: condenser.py
app/worker/: ingest_worker.py
